# ohte-salasana-hallinta

./: .coveragerc  .pylintrc  README.md  pyproject.toml  readme.md  tasks.py  työkirjanpito.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
projekti/docs/: vaatimusmaarittely.md
src/: constants.py  main.py  password_manager_app.py
src/controller/: app_controller.py  create_vault_controller.py  locked_controller.py  view_controller.py
src/model/: credential.py  database.py  locked_state.py  vault.py
src/repository/: credential_repository.py  database.py
src/service/: credential_service.py  database_service.py  vault_service.py
src/services/: vault_discovery.py
src/test/services/: test_credential_service.py  test_database_service.py  test_vault_service.py
src/test/util/: test_crypto.py
src/tests/repository/: test_database.py
src/ui/: password_manager_app.py
src/ui/styles/: styles.tcss
src/ui/views/: locked_view.py
src/util/: crypto.py  discover_databases.py
src/view/: create_credential_view.py  create_vault_view.py  locked_view.py  password_manager_app.py  update_credential_view.py  vault_view.py
