[tool.poetry]
name = "projekti"
version = "0.1.0"
description = ""
authors = ["Anto Keinänen <anto.keinanen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
platformdirs = "^4.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "7.6.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "src"
pythonpath = [
  "./src/"
]

