[tool.poetry]
name = "projekti"
version = "0.1.0"
description = ""
authors = ["Anto Keinänen <anto.keinanen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
platformdirs = "^4.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "7.6.12"
invoke = "^2.2.0"
pylint = "^3.3.6"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "src"
pythonpath = ["./src/"]

[tool.coverage.run]
source = ["src"]
omit = [
  "src/test/**",
  "src/view/**",
  "src/**/__init__.py",
  "src/**/view_controller.py",
  "src/**/app_controller.py",
  "main.py",
]
